dc-reg-api/kubernetes/regapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regapi
  template:
    metadata:
      name: regapi
      labels:
        app: regapi
    spec:
      containers:
      - name: regapi
        image: oydeu/dc-regapi:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: regapi
spec:
  selector:
    app: regapi
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec: 
  tls:
  - hosts:
    - regapi.staging.dec112.eu
    # - regapi.data-container.net
    secretName: regapi-tls
  rules:
  - host: regapi.staging.dec112.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: regapi
            port:
              number: 80
